first successful test case