@@ -8,9 +8,11 @@ lazy val root = (project in file(".")).
     name := "spark-util",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % versions.scalatest % Test,
-      "org.apache.spark" %% "spark-sql" % versions.spark % "provided",
+      "org.apache.spark" %% "spark-sql" % versions.spark % Provided,
+      "org.apache.spark" %% "spark-hive" % versions.spark % Test,
       "ch.qos.logback" % "logback-classic" % versions.logback,
-      "com.typesafe.scala-logging" %% "scala-logging-slf4j" % versions.scalaLogging
+      "com.typesafe.scala-logging" %% "scala-logging-slf4j" % versions.scalaLogging,
+      "com.holdenkarau" %% "spark-testing-base" % versions.sparkTestingBase % Test
     )
   )
 lazy val versions = new {
@@ -18,6 +20,7 @@ lazy val versions = new {
   val spark = "2.2.1"
   val logback = "1.2.3"
   val scalaLogging = "2.1.2"
+  val sparkTestingBase = "2.2.0_0.8.0"
 }
 wartremoverErrors ++= Warts.allBut(
   Wart.ToString,
@@ -29,3 +32,6 @@ wartremoverErrors ++= Warts.allBut(
   Wart.NonUnitStatements,
   Wart.Var
 )
+fork in Test := true
+parallelExecution in Test := false
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
